feat: add seller order id in agent command
